Fix H1 z-index and positioning on wide & short screens
Dropped H1 z-index to -1 so it goes behind the text on mobile.

On devices wider than 800 (50em) but shorter than 640 (40em) it now also changes to position relative so that it scrolls off rather than being overlayed by the content.

--- a/css/site.css
+++ b/css/site.css
@@ -98,7 +98,7 @@ h1, h2, h3 {
   line-height: 1.15;
 }
 
-h1 a:link, h1 a:visited, h1 a:hover, h1 a:active, h1 a:focus {
+h1, h1 a:link, h1 a:visited, h1 a:hover, h1 a:active, h1 a:focus {
   font-family: 'Tiempos headline',  georgia, serif;
   font-size: .9rem;
   position: fixed;
@@ -106,6 +106,7 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:active, h1 a:focus {
   color: white;
   text-decoration: none;
   font-weight: 600;
+  z-index: -1;
 }
 
 h1 span {
@@ -663,10 +664,16 @@ fieldset, form, label {
   .container {
     margin-left: 41%;
     margin-left: calc(40% + .5rem);
-    margin-top: 33vh;
+    margin-top: 25vh;
     width: 49%;
     width: calc(50% - 1rem);
   }
+
+  h1, h1 a:link, h1 a:visited, h1 a:hover, h1 a:active, h1 a:focus {
+    position: relative;
+    top: -25vh;
+  }
+
 
   .profile-image {
     position: fixed;
@@ -711,6 +718,18 @@ fieldset, form, label {
   }
 
 }
+
+@media all and (min-width: 50em) and (min-height: 40em) { /* WIDTH: 50 x 16 = 800 HEIGHT: 40 x 16 = 640 */
+  .container {
+    margin-top: 33vh;
+  }
+
+  h1, h1 a:link, h1 a:visited, h1 a:hover, h1 a:active, h1 a:focus {
+    position: fixed;
+    top: 1em;
+  }
+}
+
 
 @media all and (min-width: 64em) { /* 64 x 16 = 1024 */
   /* Add a column of whitespace either side of container and max-width it at 640 */
